--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "cover": "istanbul cover -x '**/lib/devices/**' node_modules/.bin/_mocha  -- --reporter spec test/*-test.js"
   },
   "dependencies": {
-    "bcrypto": "2.0.0",
-    "blgr": "^0.1.2",
-    "bmutex": "0.1.3",
-    "bsert": "0.0.4",
-    "bufio": "1.0.2",
+    "bcrypto": "~2.0.0",
+    "blgr": "~0.1.2",
+    "bmutex": "~0.1.3",
+    "bsert": "~0.0.4",
+    "bufio": "~1.0.2"
+  },
+  "optionalDependencies": {
     "node-hid": "^0.7.3",
     "u2f-api": "^1.0.8"
   },
