--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run: npm install
-      - run: npm install codecov
+      - run: npm install eslint istanbul@1.1.0-alpha.1 codecov
       - save_cache:
           paths:
             - node_modules
@@ -56,4 +56,3 @@ workflows:
       - test:
           requires:
             - install
-
