--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "bmocha --reporter spec test/*-test.js",
     "test-ci": "istanbul cover node_modules/.bin/bmocha --report lcovonly -- --reporter spec test/*.js",
     "test-hid": "bmocha --reporter spec test/device/hid-test.js",
-    "test-u2f": "karma start .config/karma.conf.js",
+    "test-u2f": "./scripts/bmocha-chrome test/device/u2f-test.js",
     "webpack": "webpack --config .config/webpack.js",
     "webpack-dev": "webpack --config .config/webpack.dev.js",
     "webpack-devdeps": "webpack --config .config/webpack.devdeps.js",
