--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "lint": "eslint lib/ test/ || exit 0",
     "lint-ci": "eslint lib/ test/",
     "test": "bmocha --reporter spec test/*-test.js",
-    "test-ci": "istanbul cover node_modules/.bin/bmocha --report lcovonly -- --reporter spec test/*.js",
+    "test-ci": "nyc --reporter=lcov --reporter=text -a -n 'lib/**/*.js' npm test",
     "test-hid": "bmocha --reporter spec test/device/hid-test.js",
     "test-u2f": "./scripts/bmocha-chrome test/device/u2f-test.js",
     "webpack": "webpack --config .config/webpack.js",
     "webpack-dev": "webpack --config .config/webpack.dev.js",
     "webpack-devdeps": "webpack --config .config/webpack.devdeps.js",
     "docs": "jsdoc -c jsdoc.json",
-    "cover": "istanbul cover -x '**/lib/devices/**' node_modules/.bin/_mocha  -- --reporter spec test/*-test.js"
+    "cover": "nyc -a -n 'lib/**/*.js' npm test"
   },
   "browser": {
     "./lib/bledger": "./lib/bledger-browser.js"
