--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "bmutex": "^0.1.6",
     "bsert": "0.0.10",
     "buffer-map": "0.0.7",
-    "bufio": "^1.0.6"
+    "bufio": "^1.0.6",
+    "node-hid": "git+https://github.com/bcoin-org/node-hid-ng.git#master"
   },
   "optionalDependencies": {
-    "node-hid": "^0.7.3",
     "u2f-api": "^1.0.8"
   },
   "peerDependencies": {
