--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
       - run: npm install
-      - run: npm install eslint nyc codecov
+      - run: npm install eslint babel-eslint nyc codecov
       - save_cache:
           paths:
             - node_modules
