--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
   },
   "homepage": "https://github.com/bcoin-org/bledger#readme",
   "scripts": {
-    "browserify": "browserify -s bledger lib/bledger.js | uglifyjs -c > bledger.js",
     "clean": "rm -rf bledger.js build/vendor* .config/certs/* ./docs ./coverage",
     "lint": "eslint examples/ lib/ test/ || exit 0",
     "lint-ci": "eslint examples/ lib/ test/",
     "test": "bmocha --reporter spec test/*-test.js",
     "test-ci": "nyc --reporter=lcov --reporter=text -a -n 'lib/**/*.js' npm test",
     "test-hid": "bmocha --reporter spec test/device/hid-test.js",
-    "test-u2f": "./scripts/bmocha-chrome test/device/u2f-test.js",
+    "test-webauthn": "./scripts/bmocha-chrome test/device/webauthn-test.js",
     "test-webusb": "./scripts/bmocha-chrome test/device/webusb-test.js",
     "webpack": "webpack --config .config/webpack.js",
     "webpack-dev": "webpack --config .config/webpack.dev.js",
@@ -49,8 +48,7 @@
     "bufio": "^1.0.6"
   },
   "optionalDependencies": {
-    "node-hid-ng": "^1.0.1",
-    "u2f-api": "^1.0.8"
+    "node-hid-ng": "^1.0.1"
   },
   "peerDependencies": {
     "bcoin": "^1.0.2"
