--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "bufio": "^1.0.6"
   },
   "optionalDependencies": {
-    "busb": "0.0.1"
+    "busb": "~0.0.1"
   },
   "peerDependencies": {
     "bcoin": "^1.0.2"
