--- a/package.json
+++ b/package.json
@@ -37,25 +37,25 @@
     "./lib/bledger": "./lib/bledger-browser.js"
   },
   "dependencies": {
-    "bcrypto": "~3.1.11",
-    "blgr": "~0.1.7",
-    "bmutex": "~0.1.6",
-    "bsert": "~0.0.10",
-    "buffer-map": "~0.0.7",
-    "bufio": "^1.0.6"
-  },
-  "optionalDependencies": {
-    "busb": "~0.1.1"
+    "bcrypto": "git+https://github.com/bcoin-org/bcrypto#semver:~5.0.4",
+    "blgr": "git+https://github.com/bcoin-org/blgr#semver:~0.1.7",
+    "bmutex": "git+https://github.com/bcoin-org/bmutex#semver:~0.1.6",
+    "bsert": "git+https://github.com/chjj/bsert#semver:~0.0.10",
+    "buffer-map": "git+https://github.com/chjj/buffer-map#semver:~0.0.7",
+    "bufio": "git+https://github.com/bcoin-org/bufio#semver:^1.0.6",
+    "busb": "git+https://github.com/nodar-chkuaselidze/busb#semver:~1.0.0-beta.0",
+    "loady": "git+https://github.com/chjj/loady#semver:~0.0.1",
+    "nan": "git+https://github.com/braydonf/nan.git#semver:^2.14.0"
   },
   "peerDependencies": {
-    "bcoin": "^1.0.2"
+    "bcoin": "git+https://github.com/bcoin-org/bcoin#semver:^2.0.0"
   },
   "devDependencies": {
-    "bcoin": "github:bcoin-org/bcoin#75722469",
-    "bmocha": "^2.1.1",
-    "bpkg": "^0.6.0"
+    "bcoin": "git+https://github.com/bcoin-org/bcoin#semver:^2.0.0",
+    "bmocha": "git+https://github.com/bcoin-org/bmocha#semver:^2.1.3",
+    "bpkg": "git+https://github.com/chjj/bpkg#semver:^0.6.0"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   }
 }
