--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
+      - run: sudo apt-get install libusb-dev libudev-dev
       - run: npm install
       - run: npm install -g bslint nyc codecov
       - save_cache:
